--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Čeští a slovenští prezidenti</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   
     <style>
       table.presidents {width: 100%;}
       .presidents th, .presidents td {border: 1px solid gray; padding: 5px;}
@@ -122,6 +123,13 @@
       </tbody>
 
       </tfoot>
+      <colgroup>
+        <col class="roky">
+        <col class="roky">
+        <col class="cr">
+        <col class="sr">
+      </colgroup>
     </table>
+    
   </body>
 </html>
